RESOLVED FIXED274161
[WebGPU] waitUntilCompleted call will fail when Queue is invalid
https://bugs.webkit.org/show_bug.cgi?id=274161
Summary [WebGPU] waitUntilCompleted call will fail when Queue is invalid
Mike Wyrzykowski
Reported 2024-05-14 10:00:47 PDT
[WebGPU] waitUntilCompleted call will fail when Queue is invalid
Attachments
Mike Wyrzykowski
Comment 1 2024-05-14 10:00:59 PDT
Mike Wyrzykowski
Comment 2 2024-05-14 10:25:52 PDT
EWS
Comment 3 2024-05-20 00:39:00 PDT
Committed 278984@main (684d2627908f): <https://commits.webkit.org/278984@main> Reviewed commits have been landed. Closing PR #28547 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.