[WebGPU] waitUntilCompleted call will fail when Queue is invalid https://bugs.webkit.org/show_bug.cgi?id=274161 <radar://128065164>

Reviewed by Dan Glastonbury.

An invalid queue will return a nil command buffer, so
check if the queue is valid prior to entering this logic.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-274161.html: Added.
* LayoutTests/fast/webgpu/fuzz-274161.txt: Added.
Add test.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::commandBufferWithDescriptor):
Return nil if Queue is invalid.

Canonical link: https://commits.webkit.org/278984@main